# cem3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LINT_SUPPRESSION.md  MIGRATION-0.19.md  MIGRATION-0.9.md  MIGRATION.md  MIGRATION_3.0.md  MIGRATION_4.0.md  README.md  book.toml  deny.toml  fix_wordcalls.py  http_simple  justfile  output  server  skynet  test-comparison  test-hello-world  test-if  test-if-else  test-nested  test-nested-if  test-test-comparison  test-test-if  test-test-if-else  test-test-nested-if
.githooks/: README.md  pre-commit
.github/workflows/: bench-calibrate.yml  bench.yml  ci-linux.yml  ci-macos.yml  ci.yml  docs.yml  release.yml
benchmarks/: .gitignore  LATEST_RUN.txt  README.md  run.sh
benchmarks/baseline/: collections_seq.txt  fanout_seq.txt  fibonacci_seq.txt  pingpong_seq.txt  primes_seq.txt  skynet_seq.txt
benchmarks/collections/: go.go  python.py  rust.rs  seq.seq
benchmarks/compute/: README.md  fib.go  fib.rs  fib.seq  leibniz_pi.go  leibniz_pi.rs  leibniz_pi.seq  mutual_tco.seq  primes.go  primes.rs  primes.seq  run.sh  sum_squares.go  sum_squares.rs  sum_squares.seq
benchmarks/fanout/: fanout  fanout.go  fanout.rs  fanout.seq  fanout_go  go.go  python.py  rust.rs  seq.seq
benchmarks/fibonacci/: go.go  python.py  rust.rs  seq.seq
benchmarks/pingpong/: go.go  pingpong  pingpong.go  pingpong.rs  pingpong.seq  pingpong_go  python.py  rust.rs  seq.seq
benchmarks/primes/: go.go  python.py  rust.rs  seq.seq
benchmarks/skynet/: go.go  (+12 more)
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  builtins.rs  codegen.rs  config.rs  lib.rs  main.rs  parser.rs  resolver.rs  stdlib_embed.rs  typechecker.rs  typechecker_new.rs  types.rs  unification.rs
compiler/stdlib/: http.seq
crates/compiler/: Cargo.toml  README.md  build.rs
crates/compiler/ffi/: libedit.toml  readline.toml
crates/compiler/src/: ast.rs  builtins.rs  call_graph.rs  capture_analysis.rs  codegen.rs  config.rs  ffi.rs  lib.rs  lint.rs  lints.toml  main.rs  parser.rs  resolver.rs  resource_lint.rs  script.rs  stdlib_embed.rs  test_runner.rs  typechecker.rs  types.rs  unification.rs
crates/compiler/src/codegen/: control_flow.rs  error.rs  ffi_wrappers.rs  globals.rs  inline_dispatch.rs  inline_ops.rs  layout.rs  mod.rs  platform.rs  program.rs  runtime.rs  specialization.rs  state.rs  statements.rs  types.rs  virtual_stack.rs  words.rs
crates/compiler/src/codegen/inline/: dispatch.rs  mod.rs  ops.rs
crates/compiler/src/codegen/inline_nanbox/: dispatch.rs  mod.rs  ops.rs
crates/compiler/stdlib/: fmath.seq  http.seq  imath.seq  json.seq  list.seq  map.seq  math.seq  result.seq  signal.seq  son.seq  stack-utils.seq  test_http.seq  test_math.seq  test_result.seq  test_stack_utils.seq  test_std_fmath.seq  test_std_imath.seq  test_zipper.seq  yaml.seq  zipper.seq
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: completion.rs  diagnostics.rs  includes.rs  main.rs
crates/repl/: Cargo.toml  README.md
crates/repl/src/: app.rs  completion.rs  engine.rs  keys.rs  lsp_client.rs  main.rs
crates/repl/src/ir/: mod.rs  stack_art.rs  stack_effects.rs
crates/repl/src/ui/: highlight.rs  ir_pane.rs  layout.rs  mod.rs  repl_pane.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: arena.rs  args.rs  arithmetic.rs  channel.rs  closures.rs  compress.rs  compress_stub.rs  cond.rs  crypto.rs  crypto_stub.rs  diagnostics.rs  encoding.rs  error.rs  file.rs  float_ops.rs  http_client.rs  http_stub.rs  io.rs  lib.rs  list_ops.rs  map_ops.rs  memory_stats.rs  nanbox.rs  os.rs  pool.rs  quotations.rs  regex.rs  regex_stub.rs  report.rs  report_stub.rs  scheduler.rs  seqstring.rs  serialize.rs  signal.rs  stack.rs  string_ops.rs  tagged_stack.rs  tcp.rs  tcp_test.rs  terminal.rs  (+6 more)
crates/runtime/tests/: test_closures.rs  test_thread_migration.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  engine.rs  lib.rs  lsp_client.rs
crates/tui/src/ir/: mod.rs  stack_art.rs
crates/tui/src/ui/: highlight.rs  ir_pane.rs  layout.rs  mod.rs  repl_pane.rs
crates/vim-line/: Cargo.toml  README.md
crates/vim-line/src/: lib.rs  vim.rs
docs/: ARCHITECTURE.md  ARENA_ALLOCATION_DESIGN.md  BATTERIES_INCLUDED.md  BUG_ROOT_CAUSE_ANALYSIS.md  BUG_SPAWN_CHANNEL_CRASH.md  CELL_VS_VALUE_DESIGN.md  CLEAN_CONCATENATIVE_DESIGN.md  CLOSURE_DESIGN.md  CONCATENATIVE_CORE_INVARIANTS.md  CONCURRENCY_TEST_CASES.md  EXAMPLES.md  FFI_GUIDE.md  FLOAT_SUPPORT_PLAN.md  GLOSSARY.md  GRAMMAR.md  INCLUDE_SYSTEM.md  JSON_ITERATION_PLAN.md  JSON_SUPPORT_PLAN.md  KNOWN_ISSUES.md  LINT_DESIGN.md  LOOPS_DESIGN.md  LTO_INVESTIGATION.md  MEMORY_MANAGEMENT_DESIGN.md  NANBOX_PLAN.md  OBSERVABILITY_GUIDE.md  PHASE10A_HTTP_SERVER_ANALYSIS.md  PHASE9_IMPLEMENTATION_PLAN.md  QUOTATIONS_DESIGN.md  README.md  ROADMAP.md  SESSION_STATUS.md  STDLIB_REFERENCE.md  STRING_INTERNING_DESIGN.md  STRING_PRIMITIVES_PLAN.md  SUMMARY.md  TCO_DESIGN.md  TCO_GUIDE.md  TESTING_GUIDE.md  TYPE_SYSTEM_DESIGN.md  TYPE_SYSTEM_DESIGN_NOTES.md  (+3 more)
examples/: README.md  cond.seq  crypto.seq  hello-world.seq  http-client.seq  lint-suppression.seq  test-closure-captures.seq  test-comparison.cem  test-comparison.seq  test-file-safe.seq  test-float.seq  test-if-else.cem  test-if.cem  test-list-ops.seq  test-map-ops.seq  test-nested-if.cem  test-pick.cem  test-pick.seq  test-string-int.seq
lsp/: Cargo.toml  PLAN.md
runtime/: Cargo.toml
runtime/src/: arena.rs  args.rs  arithmetic.rs  cemstring.rs  channel.rs  closures.rs  cond.rs  file.rs  float_ops.rs  io.rs  lib.rs  list_ops.rs  map_ops.rs  quotations.rs  scheduler.rs  seqstring.rs  serialize.rs  stack.rs  string_ops.rs  tcp.rs  value.rs  variant_ops.rs
runtime/tests/: test_thread_migration.rs
scripts/: check-bench-regression.sh  generate-examples-docs.sh
stdlib/: http.seq  json.seq  math.cem  math.seq  stack-utils.cem  test_http.seq  test_math.cem  yaml.seq
tests/: non_tail_recursive.seq  tco_closure_no_tco.seq  tco_closure_recursive.seq  tco_mutual_recursion.seq  tco_nested_if.seq  tco_quotation_call.seq  tco_single_branch_if.seq  tco_test.seq  test-arithmetic.seq
(+227 files in other folders)
