[workspace]
members = ["crates/runtime", "crates/compiler", "crates/lsp"]
resolver = "2"

[workspace.package]
version = "0.10.7"
edition = "2024"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"

[workspace.dependencies]
# Concurrency
may = { version = "0.3", features = ["rand_work_steal"] }

# Memory management
bumpalo = "3.16"

# System calls
libc = "0.2"

# Serialization (for Value persistence/exchange)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
