[package]
name = "cem3-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]  # staticlib for LLVM linking, rlib for testing

[dependencies]
# May - Erlang-style green threads / coroutines for CSP concurrency
may.workspace = true

[dev-dependencies]
