[package]
name = "seq-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compiler for the Seq programming language"
repository = "https://github.com/navicore/patch-seq"
keywords = ["compiler", "language", "seq"]
categories = ["compilers", "development-tools"]
include = ["src/**/*", "stdlib/**/*", "build.rs", "Cargo.toml"]

[[bin]]
name = "seqc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
# Version must EXACTLY match workspace version - enforced by build.rs and CI
seq-runtime = { path = "../runtime", version = "=0.7.0" }
toml = "0.8"

[lib]
name = "seqc"
path = "src/lib.rs"
