[package]
name = "seq-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compiler for the Seq programming language"
repository = "https://github.com/navicore/patch-seq"
keywords = ["compiler", "language", "seq"]
categories = ["compilers", "development-tools"]
include = ["src/**/*", "stdlib/**/*", "ffi/**/*", "build.rs", "Cargo.toml"]

[[bin]]
name = "seqc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
toml.workspace = true

[build-dependencies]
# Version must EXACTLY match workspace version - enforced by build.rs and CI
seq-runtime = { path = "../runtime", version = "=0.19.1" }
toml.workspace = true

[lib]
name = "seqc"
path = "src/lib.rs"

[dev-dependencies]
tempfile.workspace = true
