[package]
name = "seq-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Seq"
repository = "https://github.com/navicore/patch-seq"
keywords = ["lsp", "language-server", "seq"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "seq-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Seq compiler (package is seq-compiler, lib is seqc)
# Version must EXACTLY match workspace version - enforced by CI
seq-compiler = { path = "../compiler", version = "=0.10.4" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
