[package]
name = "seq-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Seq"
repository = "https://github.com/navicore/patch-seq"
keywords = ["lsp", "language-server", "seq"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "seq-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol
tower-lsp.workspace = true
tokio.workspace = true

# Seq compiler (package is seq-compiler, lib is seqc)
# Version must EXACTLY match workspace version - enforced by CI
seq-compiler = { path = "../compiler", version = "=0.12.1" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
