[package]
name = "seq-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Watch-style REPL for the Seq programming language"
repository = "https://github.com/navicore/patch-seq"
keywords = ["repl", "language", "seq"]
categories = ["development-tools"]

[[bin]]
name = "seqr"
path = "src/main.rs"

[dependencies]
# Seq compiler - version must EXACTLY match workspace version (enforced by CI)
seq-compiler = { path = "../compiler", version = "=0.12.3" }
clap.workspace = true
rustyline.workspace = true
tempfile.workspace = true
notify.workspace = true
dirs.workspace = true
