[package]
name = "seq-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Watch-style REPL for the Seq programming language"
repository = "https://github.com/navicore/patch-seq"
keywords = ["repl", "language", "seq"]
categories = ["development-tools"]

[[bin]]
name = "seqr"
path = "src/main.rs"

[dependencies]
# Seq compiler - version must EXACTLY match workspace version (enforced by CI)
seq-compiler = { path = "../compiler", version = "=0.13.0" }
# TUI mode (optional, enabled by --tui flag)
seq-tui = { path = "../tui", version = "=0.13.0" }
clap.workspace = true
rustyline.workspace = true
tempfile.workspace = true
notify.workspace = true
dirs.workspace = true

# LSP client
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
