[package]
name = "seq-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI REPL for the Seq programming language with IR visualization"
repository = "https://github.com/navicore/patch-seq"
keywords = ["repl", "language", "seq", "tui"]
categories = ["development-tools"]

[[bin]]
name = "seqr"
path = "src/main.rs"

[dependencies]
# TUI REPL - version must EXACTLY match workspace version (enforced by CI)
seq-tui = { path = "../tui", version = "=0.14.1" }
clap.workspace = true
