[package]
name = "seq-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime library for the Seq programming language"
repository = "https://github.com/navicore/patch-seq"
keywords = ["runtime", "language", "seq"]
categories = ["compilers", "development-tools"]

[lib]
crate-type = ["staticlib", "rlib"]  # staticlib for LLVM linking, rlib for testing

[dependencies]
# May - Erlang-style green threads / coroutines for CSP concurrency
may.workspace = true

# Bumpalo - Fast bump allocation for strand-local arenas
bumpalo.workspace = true

# libc - System call interface
libc.workspace = true

# Serialization (for Value persistence/exchange with external systems)
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
tempfile = "3"
