[package]
name = "seq-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI REPL for the Seq programming language with IR visualization"
repository = "https://github.com/navicore/patch-seq"
keywords = ["tui", "repl", "language", "seq"]
categories = ["development-tools"]

[lib]
name = "seq_tui"
path = "src/lib.rs"

[dependencies]
# Seq compiler - version must EXACTLY match workspace version (enforced by CI)
seq-compiler = { path = "../compiler", version = "=0.13.0" }

# TUI framework - using latest v0.30 (consult https://ratatui.rs/)
ratatui.workspace = true
crossterm.workspace = true

# Session file management
tempfile.workspace = true

# History persistence
dirs.workspace = true
